--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,12 @@
 
     <!-- Generic properties -->
     <java.version>1.8</java.version>
+	<spring.version>5.1.2.RELEASE</spring.version>
+	<junit.version>4.11</junit.version>
+	<log4j.version>1.2.17</log4j.version>
+	<sonar.host.url>http://3.83.70.57:9000/</sonar.host.url>
+	<sonar.login>admin</sonar.login>
+	<sonar.password>admin</sonar.password> 	
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 
@@ -139,6 +145,17 @@
       <optional>true</optional>
     </dependency>
   </dependencies>
+
+	<distributionManagement>
+
+	    <snapshotRepository>
+	      <id>nexus</id>
+	      <name>Nexus Repository </name>
+	      <url>http://34.227.170.107:8081/repository/maven-snapshots/</url>
+	    </snapshotRepository>
+	    
+	</distributionManagement>
+
 
   <build>
     <plugins>
